# MY_AI_LEARNINGS

./: .env.example  .gitignore  README.md  dynamic_prompt.py  dynamicmodel.py  multimodalInput.py  pyproject.toml  rag.py  resume_rag.py  small_rag.py  tuto.py
resume_rag.faiss/: index.faiss  index.pkl
text.rag.faiss/: index.faiss  index.pkl
